<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".MainActivity">

	<Button
		android:id="@+id/query_data"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Query Data">
	</Button>

	<Button
		android:id="@+id/recycler"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Recycler">
	</Button>

	<Button
		android:id="@+id/job_scheduler"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="JobScheduler"/>

	<Button
		android:id="@+id/async_task"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="AsyncTask"/>

	<Button
		android:id="@+id/drawer"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Drawer"/>

	<Button
		android:id="@+id/start_service"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Start service"/>

	<Button
		android:id="@+id/bind_service"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Bind Service"/>
</LinearLayout>