<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".QueryDataActivity">

	<LinearLayout
		android:id="@+id/layout1"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:background="@color/colorPrimary"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toTopOf="parent" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Name:">
		</TextView>

		<EditText
			android:id="@+id/edit_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="text">
		</EditText>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/layout2"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:background="@color/colorAccent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/layout1">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Number:" >
		</TextView>


		<EditText
			android:id="@+id/edit_grade"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="number">
		</EditText>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/layout3"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:background="@android:color/darker_gray"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@id/layout2">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="ID:" >
		</TextView>


		<EditText
			android:id="@+id/edit_identifier"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="number">
		</EditText>
	</LinearLayout>

	<Button
		android:id="@+id/add"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Add"
		app:layout_constraintTop_toBottomOf="@id/layout3"
		app:layout_constraintLeft_toLeftOf="parent">
	</Button>

	<Button
		android:id="@+id/retrieve"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Retrieve"
		app:layout_constraintTop_toBottomOf="@id/add"
		app:layout_constraintLeft_toLeftOf="parent">
	</Button>

	<Button
		android:id="@+id/refresh"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Refresh"
		app:layout_constraintTop_toBottomOf="@id/retrieve"
		app:layout_constraintLeft_toLeftOf="parent">
	</Button>

	<ListView
		android:id="@+id/listView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toBottomOf="@id/refresh">
	</ListView>
</androidx.constraintlayout.widget.ConstraintLayout>